--- a/project/src/app/about/about.component.html
+++ b/project/src/app/about/about.component.html
@@ -6,32 +6,33 @@
     </div>
     <div class="code_rows">
       <span class="module">"name": </span>
-      <span class="object">"Vaska Zardiashvili",</span>
+      <span class="object"
+        >"Vaska Zardiashvili"<span style="color: white">,</span></span
+      >
     </div>
     <div class="code_rows">
       <span class="module">"nickname":</span>
-      <span class="object">"zzz077",</span>
+      <span class="object">"zzz077"<span style="color: white">,</span></span>
     </div>
     <div class="code_rows">
       <span class="module">"dayOfBirthTimestamp":</span>
-      <span class="object number">1091599200,</span>
+      <span class="object number"
+        >1091599200<span style="color: white"
+          ><span style="color: white">,</span></span
+        ></span
+      >
     </div>
     <div class="code_rows">
       <span class="module">"email":</span>
-      <span class="object">"zardiashvili2004{{ "@gmail" }}.com",</span>
+      <span class="object"
+        >"zardiashvili2004{{ "@gmail" }}.com"<span style="color: white"
+          >,</span
+        ></span
+      >
     </div>
     <div class="code_rows">
-      <span class="module">"workExperience":</span>
-      <span class="bracketsPurple">
-        {{ "[" }}
-        <span class="bracketsBlue">
-          {{ "{" }}
-          <span class="module" style="margin-right: 1rem">"none":</span>
-          <span class="object">"Not yet"</span>
-          {{ "}" }}
-        </span>
-        {{ "]" }}
-      </span>
+      <span class="module">"workExperience": </span>
+      <span class="object">"not yet"<span style="color: white">,</span></span>
     </div>
     <div class="code_rows">
       <span class="module">"education":</span>
@@ -45,10 +46,12 @@
       </span>
     </div>
     <div class="code_rows">
-      <span class="module" style="margin-left: 2.4rem">"2022-now":</span>
+      <span class="module" style="margin-left: 2.4rem">"2022-2026":</span>
       <span class="object"
-        >"International Black Sea University computer science, II
-        course.",</span
+        >"International Black Sea University computer science, II course."<span
+          style="color: white"
+          >,</span
+        ></span
       >
     </div>
     <div class="code_rows">
@@ -62,7 +65,10 @@
       </span>
       <span class="module">"2021-2022":</span>
       <span class="object"
-        >"Evo-gen Front-End Development 3-month course.",</span
+        >"Evo-gen Front-End Development 3-month course."<span
+          style="color: white"
+          >,</span
+        ></span
       >
       <span class="bracketsBlue">
         {{ "}," }}
@@ -73,7 +79,9 @@
         {{ "{" }}
       </span>
       <span class="module">"2022-now":</span>
-      <span class="object">"c++ olympiad group.",</span>
+      <span class="object"
+        >"c++ olympiad group."<span style="color: white">,</span></span
+      >
       <span class="bracketsBlue">
         {{ "}" }}
       </span>
@@ -85,71 +93,111 @@
     </div>
     <div class="code_rows">
       <span class="module"> "skills":</span>
-      <span class="bracketsPurple">
-        {{ "[" }}
+      <span class="bracketsBlue">
+        {{ "{" }}
       </span>
-    </div>
-    <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "HTML5",</span>
-    </div>
-    <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "CSS3",</span>
-    </div>
-    <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "Javascript",</span>
-    </div>
-    <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "Typescript",</span>
-    </div>
-    <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "Angular",</span>
-    </div>
-    <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "Firebase",</span>
-    </div>
-    <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "Ngrx",</span>
-    </div>
-    <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "Rxjs",</span>
-    </div>
-    <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "Rest API",</span>
-    </div>
-    <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "JSON",</span>
-    </div>
-    <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "c++",</span>
-    </div>
-    <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "Algorithms",</span>
-    </div>
-    <div class="code_rows">
-      <span class="bracketsPurple">{{ "]," }}</span>
-    </div>
-    <div class="code_rows">
-      <span class="module"> "Additional skills":</span>
-      <span class="bracketsPurple">
-        {{ "[" }}
-      </span>
-    </div>
-    <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "PHP",</span>
-    </div>
-    <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "c++",</span>
-    </div>
-    <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "Blender",</span>
     </div>
     <div class="code_rows">
       <span style="margin-left: 1rem" class="object">
-        "Unreal Engine 4-5",</span
+        "HTML5"<span style="color: white">,</span></span
       >
     </div>
     <div class="code_rows">
-      <span class="bracketsPurple">{{ "]" }}</span>
+      <span style="margin-left: 1rem" class="object">
+        "CSS3"<span style="color: white">,</span></span
+      >
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "Javascript"<span style="color: white">,</span></span
+      >
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "Typescript"<span style="color: white">,</span></span
+      >
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "Angular"<span style="color: white">,</span></span
+      >
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "Firebase"<span style="color: white">,</span></span
+      >
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "Ngrx"<span style="color: white">,</span></span
+      >
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "Rxjs"<span style="color: white">,</span></span
+      >
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "Rest API"<span style="color: white">,</span></span
+      >
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "JSON"<span style="color: white">,</span></span
+      >
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "c++"<span style="color: white">,</span></span
+      >
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "Nodejs"<span style="color: white">,</span></span
+      >
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "MongoDB"<span style="color: white">,</span></span
+      >
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "Algorithms"<span style="color: white">,</span></span
+      >
+    </div>
+    <div class="code_rows">
+      <span class="bracketsBlue">{{ "}," }}</span>
+    </div>
+    <div class="code_rows">
+      <span class="module"> "Additional skills":</span>
+      <span class="bracketsBlue">
+        {{ "{" }}
+      </span>
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "PHP" <span style="color: white">,</span>
+      </span>
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "c++" <span style="color: white">,</span>
+      </span>
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "Blender" <span style="color: white">,</span>
+      </span>
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "Unreal Engine 4-5" <span style="color: white">,</span>
+      </span>
+    </div>
+    <div class="code_rows">
+      <span class="bracketsBlue">{{ "}" }}</span>
     </div>
     <div class="code_rows">
       <span class="brackets">{{ "}" }}</span>
