--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -1,11 +1,5 @@
-<div *ngIf="!isLoaded" class="loader_box">
-  <h1>zzz077</h1>
-</div>
-
-<div *ngIf="isLoaded" class="site-wrapper">
-  <div id="start" class="patern_box start_box">
-    <app-start></app-start>
-  </div>
+<div class="site-wrapper">
+  <!--NAVBAR-->
   <nav
     [class.navbarclicked]="isNavbarClicked && isScrolled"
     [class.active]="!isNavbarClicked && isScrolled"
@@ -53,10 +47,18 @@
       </ul>
     </div>
   </nav>
+  <!--START SECTION-->
+  <div id="start" class="patern_box start_box">
+    <app-start></app-start>
+  </div>
+  <!--MAIN SECTION-->
   <main>
+    <!--ABOUT SECTION-->
     <app-about id="about"></app-about>
+    <!--LAB SECTION-->
     <app-lab id="lab"></app-lab>
   </main>
+  <!--FOOTER SECTION-->
   <footer id="footer">
     <div class="site_footer">
       <h1 class="content_name"><a>Find me on</a>/></h1>
@@ -79,11 +81,8 @@
             >
           </li>
           <li>
-            <i class="fa-brands fa-upwork"></i
-            ><a
-              href="https://www.upwork.com/freelancers/~01b1a5dd819691cef7?viewMode=1"
-              >Vaska Z</a
-            >
+            <i class="fa-solid fa-envelope"></i>
+            <a href="">{{ "zardiashvili2004@gmail.com" }}</a>
           </li>
         </ul>
       </div>
