--- a/project/src/app/lab/lab.component.html
+++ b/project/src/app/lab/lab.component.html
@@ -5,76 +5,52 @@
       <ul>
         <h1>Sites</h1>
         <div class="lab_links">
-          <li (mouseenter)="linkMouseEnter(3)" (mouseleave)="linkMouseLeave()">
-            <a href="https://zzz-skydash.netlify.app/">Administrator site</a>
-            <img src="/assets/SiteLogoN1.png" alt="" />
-          </li>
-          <li (mouseenter)="linkMouseEnter(4)" (mouseleave)="linkMouseLeave()">
-            <a href="https://zzz-scholar.netlify.app/"
-              >Programing Courses site</a
-            >
-            <img src="/assets/SiteLogoN2.png" alt="" />
-          </li>
-          <li (mouseenter)="linkMouseEnter(5)" (mouseleave)="linkMouseLeave()">
-            <a href="https://zzz-077.github.io/wix.github.io/"
-              >Online Market site</a
-            >
-            <img src="/assets/SiteLogoN3.png" alt="" />
-          </li>
-          <li (mouseenter)="linkMouseEnter(6)" (mouseleave)="linkMouseLeave()">
-            <a href="https://masterleague.netlify.app/">CSGO Esport site</a>
-            <img src="/assets/SiteLogoN4.png" alt="" />
-          </li>
-          <li (mouseenter)="linkMouseEnter(7)" (mouseleave)="linkMouseLeave()">
-            <a href="https://zzz-sweatworks.netlify.app/"
-              >Gym Information site</a
-            >
-            <img src="/assets/SiteLogoN5.png" alt="" />
-          </li>
-          <li (mouseenter)="linkMouseEnter(8)" (mouseleave)="linkMouseLeave()">
-            <a href="http://socialserviceproject.infinityfreeapp.com/index.php"
-              >Social Services site</a
-            >
-            <img src="/assets/SiteLogoN6.png" alt="" />
-          </li>
-          <li (mouseenter)="linkMouseEnter(9)" (mouseleave)="linkMouseLeave()">
-            <a href="https://versalo.vercel.app">Car sell&buy site</a>
-            <img src="/assets/SiteLogoN7.png" alt="" />
-          </li>
-          <li (mouseenter)="linkMouseEnter(10)" (mouseleave)="linkMouseLeave()">
-            <a href="https://nbsplv.vercel.app/">Music site</a>
-            <img src="/assets/SiteLogoN8.png" alt="" />
-          </li>
-          <li (mouseenter)="linkMouseEnter(11)" (mouseleave)="linkMouseLeave()">
-            <a href="https://cdmarket.netlify.app/">CD Games site</a>
-            <img src="/assets/SiteLogoN9.png" alt="" />
+          <li
+            *ngFor="let item of portfolioData[0].sites"
+            (mouseenter)="linkMouseEnter(item.id)"
+            (mouseleave)="linkMouseLeave()"
+          >
+            <a [href]="item.href">{{ item.name }}</a>
+            <img [src]="item.icon" alt="" />
           </li>
         </div>
       </ul>
       <ul>
         <h1>Games</h1>
         <div class="lab_links">
-          <li (mouseenter)="linkMouseEnter(1)" (mouseleave)="linkMouseLeave()">
-            <a href="https://zzzwordli.netlify.app/">Wordli Puzzle Game</a>
-            <img src="/assets/GameLogoN1.png" alt="" />
-          </li>
-          <li (mouseenter)="linkMouseEnter(2)" (mouseleave)="linkMouseLeave()">
-            <a href="https://englishquiz-game.netlify.app/"
-              >English Quiz Game</a
-            >
-            <img src="/assets/GameLogoN2.png" alt="" />
+          <li
+            *ngFor="let item of portfolioData[0].games"
+            (mouseenter)="linkMouseEnter(item.id)"
+            (mouseleave)="linkMouseLeave()"
+          >
+            <a [href]="item.href">{{ item.name }}</a>
+            <img [src]="item.icon" alt="" />
           </li>
         </div>
       </ul>
     </div>
     <div class="display_box">
-      <div *ngFor="let img of imgData">
-        <img
-          *ngIf="img.id == linkId"
-          [ngClass]="img.id == linkId ? 'active' : null"
-          [src]="img.img"
-          alt=""
-        />
+      <div
+        class="display_list"
+        *ngFor="
+          let item of portfolioData[0].sites.concat(portfolioData[0].games)
+        "
+      >
+        <div
+          class="content"
+          *ngIf="item.id == linkId"
+          [ngClass]="item.id == linkId ? 'active' : null"
+        >
+          <img [src]="item.img" alt="" />
+          <div class="site_description">
+            <span>"Description":</span>
+            <p>{{ item.description }}</p>
+          </div>
+          <div class="site_responsive">
+            <span>"Responsive": </span>
+            <p>{{ item.responsive }}</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
