--- a/project/src/app/about/about.component.html
+++ b/project/src/app/about/about.component.html
@@ -15,9 +15,9 @@
       <span class="object">"zzz077"<span style="color: white">,</span></span>
     </div>
     <div class="code_rows">
-      <span class="module">"dayOfBirthTimestamp":</span>
+      <span class="module">"age":</span>
       <span class="object number"
-        >1091599200<span style="color: white"
+        >21<span style="color: white"
           ><span style="color: white">,</span></span
         ></span
       >
@@ -30,10 +30,37 @@
         ></span
       >
     </div>
+    <!-- workExperience -->
     <div class="code_rows">
-      <span class="module">"workExperience": </span>
-      <span class="object">"not yet"<span style="color: white">,</span></span>
+      <span class="module">"workExperience":</span>
+      <span class="bracketsPurple">
+        {{ "[" }}
+      </span>
     </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="bracketsBlue">
+        {{ "{" }}
+      </span>
+    </div>
+    <div class="code_rows">
+      <span class="module" style="margin-left: 2.4rem">"2025-current":</span>
+      <span class="object"
+        >"TalesBox company. Backend(nestjs) Developer"<span style="color: white"
+          >,</span
+        ></span
+      >
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="bracketsBlue">
+        {{ "}," }}
+      </span>
+    </div>
+    <div class="code_rows">
+      <span class="bracketsPurple">
+        {{ "]," }}
+      </span>
+    </div>
+    <!-- education -->
     <div class="code_rows">
       <span class="module">"education":</span>
       <span class="bracketsPurple">
@@ -78,7 +105,7 @@
       <span style="margin-left: 1rem" class="bracketsBlue">
         {{ "{" }}
       </span>
-      <span class="module">"2022-now":</span>
+      <span class="module">"2022-2024":</span>
       <span class="object"
         >"c++ olympiad group."<span style="color: white">,</span></span
       >
@@ -154,7 +181,27 @@
     </div>
     <div class="code_rows">
       <span style="margin-left: 1rem" class="object">
-        "Nodejs"<span style="color: white">,</span></span
+        "NodeJs"<span style="color: white">,</span></span
+      >
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "NestJs"<span style="color: white">,</span></span
+      >
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "Stripe"<span style="color: white">,</span></span
+      >
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "Docker"<span style="color: white">,</span></span
+      >
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object">
+        "Git"<span style="color: white">,</span></span
       >
     </div>
     <div class="code_rows">
